--- a/homework/hw2/part1/problem2/Makefile
+++ b/homework/hw2/part1/problem2/Makefile
@@ -3,11 +3,11 @@ CFLAGS = -g -Wall
 
 OBJECTS = main.o ColMajorMat.o MatFunc.o
 
-LinAl: $(OBJECTS)
+run: $(OBJECTS)
 	$(CC) $(CFLAGS) $(OBJECTS) -lm -o $@
 
 %.o: ../%.c
 	$(CC) $(CFLAGS) -c $<
 
 clean:
-	rm -f LinAl *.o *.d *~
+	rm -f run *.o *.d *~
