--- a/homework/Final_Project/part1/prob_a/.gitignore
+++ b/homework/Final_Project/part1/prob_a/.gitignore
@@ -1,9 +1,2 @@
-Image_1280.dat
-Image_160.dat
-Image_20.dat
-Image_2560.dat
-Image_320.dat
-Image_3355.dat
-Image_40.dat
-Image_640.dat
-Image_80.dat
+*.dat
+*.png
